credentials are also stored. Acceptance of fingerprint will be remembered.

  - Markers for whitespace (space, tab, newline) and Bidi-characters in the 
View menu

  - Tag colouring for RTL languages/orientation

  - The right-click popup menu has been reorganised

  - When translating a Word (.docx) document and the target language
is RTL, the paragraphs are set automatically to RTL in the target document

  Bug fixes:

  - PO filter: there was an error when loading PO files with a target
language with 1 plural form

  - Team projects: changes in the writable glossary were not calculated 
correctly, which resulted in duplicate entries

  - Team projects: when the writeable glossary was not inside the 
working copy, it was not possible to synchronise the project. Now, if
the writeable glossary is outside the working copy, no attempt is done 
to synchronise it.

  Localisation updates:

  - Slovenian localisation updated to 2.6.1 update 2 (UI)
  - Dutch localization updated to 2.6.1 update 2 (UI, documentation, readme)
  - Russian localization updated to 2.6.1 update 2 (UI, documentation, readme)
  - Italian localisation updated to 2.6.1 update 2 (UI)


----------------------------------------------------------------------
 OmegaT 2.6.1 update 2
----------------------------------------------------------------------
  11 Enhancements
   7 Bug fixes
   7 Localisation updates
----------------------------------------------------------------------
2.6.1 update 2 vs. 2.6.1 update 1

  Implemented requests:

  - Show where text has been added in match window
  http://sourceforge.net/support/tracker.php?aid=1483716

  - Save authentication information for team projects
  http://sourceforge.net/support/tracker.php?aid=3574419

  Other enhancements:

  - Git authorized access

  - Support for gzipped (.tmx.gz) external TMXs

  - Alignment (for filters that support it) now segments into sentences if 
segmentation is enabled in the project

  - Git submodule support added
